# VkTests

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AssetLibrary/: CMakeLists.txt
AssetLibrary/include/: AssetLibrary.hpp
AssetLibrary/src/: Asset.cpp  Asset.hpp  Compression.cpp  Compression.hpp  MaterialAsset.cpp  MaterialAsset.hpp  MeshAsset.cpp  MeshAsset.hpp  PrefabAsset.cpp  PrefabAsset.hpp  TextureAsset.cpp  TextureAsset.hpp
AssetParser/: CMakeLists.txt
AssetParser/src/: Main.cpp
Data/assets/shaders/: base.frag  base.vert
Data/shaders/: base.frag  base.vert
Vulkan/: CMakeLists.txt
Vulkan/src/: Main.cpp  Pch.hpp
Vulkan/src/Core/: Application.cpp  Application.hpp  Definitions.hpp  FunctionQueue.cpp  FunctionQueue.hpp  Log.cpp  Log.hpp  UID.cpp  UID.hpp  Window.cpp  Window.hpp
Vulkan/src/Rendering/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  Descriptors.cpp  Descriptors.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  Profiler.cpp  Profiler.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  State.cpp  State.hpp  Texture.cpp  Texture.hpp  VertexData.cpp  VertexData.hpp
Vulkan/src/Scene/: Scene.cpp  Scene.hpp
